@startuml

title __ENROLLMENT's Class Diagram__\n

  namespace ch.bfh.ti.academia {
    namespace enrollment {
      class ch.bfh.ti.academia.enrollment.Enrollment {
          - firstname : String
          - grade : String
          - lastname : String
          - pid : int
          + Enrollment()
          + Enrollment()
          + getFirstname()
          + getGrade()
          + getLastname()
          + getPid()
          + setFirstname()
          + setGrade()
          + setLastname()
          + setPid()
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace enrollment {
      class ch.bfh.ti.academia.enrollment.EnrollmentController {
          {static} - CONTENT_TYPE_HEADER : String
          {static} - JSON_MEDIA_TYPE : String
          {static} - logger : Logger
          - objectMapper : ObjectMapper
          + doDelete()
          + doGet()
          + doPost()
          + doPut()
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace enrollment {
      class ch.bfh.ti.academia.enrollment.EnrollmentRepository {
          {static} - DELETE_ENROLL_QUERY : String
          {static} - FIND_ENROLLMENTS : String
          {static} - FIND_ENROLL_QUERY : String
          {static} - FIND_MODULERUN_QUERY : String
          {static} - FIND_TEACHER : String
          {static} - INSERT_ENROLL_QUERY : String
          {static} - INSERT_GRADE_QUERY : String
          {static} - SELECT_VERSION : String
          - connection : Connection
          {static} - logger : Logger
          + EnrollmentRepository()
          + checkGrade()
          + checkModulerun()
          + checkTeacher()
          + deroll()
          + enroll()
          + getEnrollment()
          + isStudentEnrolled()
          + setGrade()
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace enrollment {
      class ch.bfh.ti.academia.enrollment.Grade {
          - grade : String
          + Grade()
          + Grade()
          + getGrade()
          + setGrade()
      }
    }
  }
  

  ch.bfh.ti.academia.enrollment.EnrollmentController -up-|> jakarta.servlet.http.HttpServlet
  ch.bfh.ti.academia.enrollment.EnrollmentController o-- ch.bfh.ti.academia.util.ConnectionManager : connectionManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
